zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__tab_with_nested_layout.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C): ┌ Pane #1 ──────────────── ace-aardvark ┐┌ Pane #2 ─────────────── apt-anteater ┐┌ Pane #3 ─────────────── big-antelope ┐
01 (C): │                                       ││                                      ││                                      │
02 (C): │                                       ││                                      ││                                      │
03 (C): │                                       ││                                      ││                                      │
04 (C): │                                       ││                                      ││                                      │
05 (C): │                                       ││                                      ││                                      │
06 (C): │                                       ││                                      ││                                      │
07 (C): │                                       ││                                      ││                                      │
08 (C): │                                       ││                                      ││                                      │
09 (C): │                                       │└──────────────────────────────────────┘│                                      │
10 (C): │                                       │┌ Pane #4 ───┐┌ Pane #5 ──┐┌ Pane #6 ──┐│                                      │
11 (C): │                                       ││            ││           ││           ││                                      │
12 (C): │                                       ││            ││           ││           ││                                      │
13 (C): │                                       ││            ││           ││           ││                                      │
14 (C): │                                       ││            ││           ││           ││                                      │
15 (C): │                                       ││            ││           ││           ││                                      │
16 (C): │                                       ││            ││           ││           ││                                      │
17 (C): │                                       ││            ││           ││           ││                                      │
18 (C): │                                       ││            ││           ││           ││                                      │
19 (C): └───────────────────────────────────────┘└────────────┘└───────────┘└───────────┘└──────────────────────────────────────┘
