zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__toggle_floating_panes_off_sends_tty_csi_event.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: "format!(\"{:?}\", *tty_stdin_bytes.lock().unwrap())"
---
{1: [27, 91, 73], 3: [27, 91, 79]}
