zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__when_resizing_whole_tab_with_auto_layout_and_floating_panes_the_layout_is_maintained.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C): ┌ Pane #1 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── ace-aardvark ┐
01 (C): │                                                                                                                                                    │
02 (C): │                                                                                                                                                    │
03 (C): │                                                                                                                                                    │
04 (C): │                                                                                                                                                    │
05 (C): │                                                                                                                                                    │
06 (C): │                                                                                                                                                    │
07 (C): │                                                                                                                                                    │
08 (C): │                                     ┌ Pane #2 ──────────────────────────────────────── apt-anteater | PIN [ ] ┐                                    │
09 (C): │                                     │                                                                         │                                    │
10 (C): │                                     │ ┌ Pane #3 ──────────────────────────────────────── big-antelope | PIN [ ] ┐                                  │
11 (C): │                                     │ │                                                                         │                                  │
12 (C): │                                     │ │ ┌ Pane #4 ──────────────────────────────────────── coy-backpack | PIN [ ] ┐                                │
13 (C): │                                     │ │ │                                                                         │                                │
14 (C): │                                     │ │ │                                                                         │                                │
15 (C): │                                     │ │ │                                                                         │                                │
16 (C): │                                     │ │ │                                                                         │                                │
17 (C): │                                     │ │ │                                                                         │                                │
18 (C): │                                     │ │ │                                                                         │                                │
19 (C): │                                     │ │ │                                                                         │                                │
20 (C): │                                     │ │ │                                                                         │                                │
21 (C): │                                     │ │ │                                                                         │                                │
22 (C): │                                     └─│ │                                                                         │                                │
23 (C): │                                       │ │                                                                         │                                │
24 (C): │                                       └─│                                                                         │                                │
25 (C): │                                         │                                                                         │                                │
26 (C): │                                         └─────────────────────────────────────────────────────────────────────────┘                                │
27 (C): │                                                                                                                                                    │
28 (C): │                                                                                                                                                    │
29 (C): └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
